@@ -1,5 +1,6 @@
 1.5
  * Added dynamic URL support
+ * Added digital signature verification
 
 1.4
  * Added PNG images
